# RagItDown

./: .gitignore  README.md  generator.py  indexer.py  main.py  pyproject.toml  retriever.py
chroma_db/: chroma.sqlite3
