[project]
name = "arag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "markitdown>=0.1.6",
    "python-dotenv>=1.2.2",
]
